# vad-system

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_voice_chat.py  test_file_vad.py  test_installation.py  test_voice_pipeline.py
config/: __init__.py  logging_config.py  settings.py
examples/: file_processing.py  integration_example.py  realtime_microphone.py  websocket_client.py
src/: __init__.py
src/audio_sources/: __init__.py  base_source.py  file_source.py  microphone_source.py  stream_source.py  websocket_source.py
src/core/: __init__.py  audio_processor.py  event_emitter.py  state_machine.py  vad_engine.py
src/handlers/: __init__.py  speech_handler.py  webhook_handler.py
src/server/: __init__.py  rest_api.py  websocket_server.py
src/utils/: __init__.py  audio_utils.py  metrics.py  ring_buffer.py
src/vad_backends/: __init__.py  base_vad.py  energy_vad.py  hybrid_vad.py  silero_vad.py  webrtc_vad.py
src/voice_chat/: __init__.py  chat_server.py  conversation.py  llm_engine.py  pipeline.py  stt_engine.py  tts_engine.py
src/voice_chat/web/: index.html
tests/: __init__.py  test_audio_processor.py  test_backends.py  test_vad_engine.py
